--- a/templates/cyberparlementProject/mail/reset_password.html
+++ b/templates/cyberparlementProject/mail/reset_password.html
@@ -3,18 +3,15 @@
 <html lang="fr-ch">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>[Cyberparlement] Validation de votre vote</title>
+    <title>[Cyberparlement] Nouveau mot de passe pour {{ member.first_name }} {{ member.last_name }}</title>
 </head>
 <body style="font-family: 'Roboto', 'Lucida Grande', 'DejaVu Sans', 'Bitstream Vera Sans', 'Helvetica Neue', 'Helvetica', Verdana, Arial, sans-serif">
 <p>
     <small>Ceci est un email automatiquement généré par le système du cyberparlement.</small><br>
     <small>Si vous ne savez pas d'où provient cet email, veuillez le supprimer.</small>
 </p>
-<h2>Bonjour {{ request.user.first_name }} {{ request.user.last_name }}</h2>
-<p>Veuillez valider votre vote à l'aide du code suivant : <b>{{ voteinitiative.code_validation }}</b></p>
-<p>
-    <a href="{{ url }}">Aller vers la page de validation &#10132;</a>
-</p>
+<h2>Bonjour {{ member.first_name }} {{ member.last_name }}</h2>
+<p>Votre nouveau mot de passe pour accéder au cyberparlement est : <b>{{ member.password }}</b></p>
 <p>
     Cordialement,<br>
     l'équipe du cyberparlement
