--- a/templates/cyberparlementProject/initiatives/includes/initiative_a_venir_include.html
+++ b/templates/cyberparlementProject/initiatives/includes/initiative_a_venir_include.html
@@ -1,7 +1,7 @@
 <div class="card mb-2 shadow-sm">
     <div class="card-body">
         <h5 class="card-title">{{ initiative.nom }}</h5>
-        <h6 class="card-subtitle">Proposé par {{ initiative.initiateur.prenom }} {{ initiative.initiateur.nom }}</h6>
+        <h6 class="card-subtitle">Proposé par {{ initiative.initiateur.first_name }} {{ initiative.initiateur.last_name }}</h6>
         <p class="card-text">
             <small>Du {{ initiative.debut_scrutin }} au {{ initiative.fin_scrutin }}</small>
         </p>
