--- a/templates/cyberparlementProject/membres/includes/member_include.html
+++ b/templates/cyberparlementProject/membres/includes/member_include.html
@@ -11,6 +11,7 @@
         <div class="d-none gap-2 d-md-flex justify-content-end">
             <a href="{% url 'member-update' slug=cyberparlement.slug pk=member.personne.id %}" class="btn btn-primary ml-2">Modifier</a>
             <a href="{% url 'member-affiliation' slug=cyberparlement.slug pk=member.id %}" class="btn btn-primary ml-2">Affilier</a>
+            <a href="{% url 'member-reset-password' slug=cyberparlement.slug pk=member.id %}" class="btn btn-primary ml-2">Réinitialiser le mot de passe</a>
             <a href="{% url 'member-delete' slug=cyberparlement.slug pk=member.id %}" class="btn btn-danger ml-2">Exclure</a>
         </div>
     </div>
