Quelques modifications + commentaires

--- a/templates/cyberparlementProject/membres/member_update.html
+++ b/templates/cyberparlementProject/membres/member_update.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-    <h1>Modifier {{ person }}</h1>
+    <h1>Modifier {{ personne }}</h1>
     <form method="POST">
         {% include 'cyberparlementProject/includes/form_include.html' %}
         <div class="buttons d-flex flex-row justify-content-end">
